	PR c++/67038 	* constraint.cc (satisfy_constraint): Use dummy args if null.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/c++-concepts@226380 138bc75d-0d04-0410-961f-82ee72b054a4